--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,6 @@ version: "3"
 services:
   ganache-cli:
     image: trufflesuite/ganache-cli
+    command: "--gasLimit 10000000"
     ports:
       - 8545:8545
