--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ERC-900 Contracts",
   "scripts": {
     "clean": "rm -rf build",
-    "migrate": "npm run lint && ./node_modules/.bin/truffle migrate --network ganache",
+    "migrate": "npm run lint && ./node_modules/.bin/truffle migrate --network ganache --reset",
     "migrate:reset": "npm run clean && npm run lint && ./node_modules/.bin/truffle migrate --reset --network ganache",
     "test": "./node_modules/.bin/truffle test --network ganache",
     "test:credits": "./node_modules/.bin/truffle test --network ganache ./test/ERC900CreditsStakeContract.test.js",
