--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   ganache-cli:
-    image: trufflesuite/ganache-cli
+    image: trufflesuite/ganache-cli:v6.1.2
     command: "--gasLimit 10000000"
     ports:
       - 8545:8545
