--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,11 @@ jobs:
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
-
+    services:
+      ganache:
+        image: trufflesuite/ganache-cli
+        ports:
+          - 8545:8545
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
