--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:js": "eslint .",
     "lint:sol": "solium -d .",
     "compile": "./node_modules/.bin/truffle compile",
-    "coverage": "./node_modules/.bin/solidity-coverage"
+    "coverage": "./node_modules/.bin/solidity-coverage",
+    "deploy-on-ropsten": "npm run lint && ./node_modules/.bin/truffle migrate --network ropsten --reset"
   },
   "repository": {
     "type": "git",
