Issue SWAP-12: removed not gonna use contracts and fixed all existing test by dependency version upgrade and sysntax fix

--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "babel-preset-env": "1.7.0",
     "chai": "4.1.2",
     "chai-as-promised": "7.1.1",
-    "chai-bignumber": "2.0.2",
+    "chai-bn": "0.2.1",
     "eslint": "4.19.1",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-import": "2.12.0",
     "ganache-cli": "6.1.0",
     "git-hooks": "1.1.10",
     "solc": "0.4.24",
-    "solidity-coverage": "0.5.4",
+    "solidity-coverage": "0.7.10",
     "solium": "1.1.7"
   },
   "dependencies": {
@@ -55,6 +55,6 @@
     "lodash": "4.17.10",
     "openzeppelin-solidity": "1.10.0",
     "truffle": "5.1.42",
-    "truffle-hdwallet-provider": "0.0.3"
+    "@truffle/hdwallet-provider": "1.0.43"
   }
 }
