--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "ERC-900 Contracts",
   "scripts": {
     "clean": "rm -rf build",
-    "migrate": "npm run lint && truffle migrate --network ganache",
-    "migrate:reset": "npm run clean && npm run lint && truffle migrate --reset --network ganache",
-    "test": "truffle test --network ganache",
-    "test:credits": "truffle test --network ganache ./test/ERC900CreditsStakeContract.test.js",
-    "test:compounding": "truffle test --network ganache ./test/ERC900CompoundingStakeContract.test.js",
-    "test:travis": "npm run ganache-cli && truffle test",
+    "migrate": "npm run lint && ./node_modules/.bin/truffle migrate --network ganache --reset",
+    "migrate:reset": "npm run clean && npm run lint && ./node_modules/.bin/truffle migrate --reset --network ganache",
+    "test": "./node_modules/.bin/truffle migrate --network test --reset && ./node_modules/.bin/truffle test --network test",
+    "test:credits": "./node_modules/.bin/truffle test --network test ./test/ERC900CreditsStakeContract.test.js",
+    "test:compounding": "./node_modules/.bin/truffle test --network test ./test/ERC900CompoundingStakeContract.test.js",
+    "test:travis": "npm run ganache-cli && ./node_modules/.bin/truffle test",
     "ganache-cli": "ganache-cli > /dev/null &",
     "lint": "npm run lint:js && npm run lint:sol",
     "lint:js": "eslint .",
     "lint:sol": "solium -d .",
-    "compile": "truffle compile",
-    "coverage": "./node_modules/.bin/solidity-coverage"
+    "compile": "./node_modules/.bin/truffle compile",
+    "coverage": "./node_modules/.bin/solidity-coverage",
+    "deploy-on-ropsten": "npm run lint && ./node_modules/.bin/truffle migrate --network ropsten --reset"
   },
   "repository": {
     "type": "git",
@@ -30,29 +31,30 @@
   "devDependencies": {
     "@codex-protocol/eslint-config-base": "latest",
     "@codex-protocol/eslint-config-truffle": "latest",
-    "babel-eslint": "^8.2.3",
-    "babel-preset-env": "^1.7.0",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^2.0.2",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "ganache-cli": "^6.1.0",
+    "babel-eslint": "8.2.3",
+    "babel-preset-env": "1.7.0",
+    "chai": "4.1.2",
+    "chai-as-promised": "7.1.1",
+    "chai-bn": "0.2.1",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-plugin-import": "2.12.0",
+    "ganache-cli": "6.1.0",
+    "git-hooks": "1.1.10",
     "solc": "0.4.24",
-    "solidity-coverage": "^0.5.4",
-    "solium": "^1.1.7"
+    "solidity-coverage": "0.7.10",
+    "solium": "1.1.7"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-register": "^6.26.0",
-    "dotenv": "^5.0.1",
-    "ethereumjs-util": "^5.2.0",
-    "ethjs-abi": "^0.2.1",
-    "lodash": "^4.17.10",
+    "axios": "0.18.0",
+    "babel-polyfill": "6.26.0",
+    "babel-register": "6.26.0",
+    "dotenv": "5.0.1",
+    "ethereumjs-util": "5.2.0",
+    "ethjs-abi": "0.2.1",
+    "lodash": "4.17.10",
     "openzeppelin-solidity": "1.10.0",
-    "truffle": "4.1.11",
-    "truffle-hdwallet-provider": "0.0.3"
+    "truffle": "5.1.42",
+    "@truffle/hdwallet-provider": "1.0.43"
   }
 }
