Issue SWAP-12: FIXME license

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "type": "git",
     "url": "https://github.com/codex-protocol/contract.erc-900"
   },
-  "author": "Codex Protocol <contact@codexprotocol.com>",
+  "author": "chain@crypto.com",
   "license": "AGPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/codex-protocol/contract.erc-900/issues"
