--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,4 +2,4 @@
 # the repo. Unless a later match takes precedence,
 # below PIC will be requested for
 # review when someone opens a pull request.
-*       @CeruleanAtMonaco @FrancoCRO
+*       @landanhu @FrancoCRO
